Navbar with files
Navigation bar with Registration form

--- a/Contact.html
+++ b/Contact.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registration Form</title>
 </head>
+<link rel="stylesheet" href="navbar.html">
 <body>
     <form style="margin-left: 300px;; border: solid; padding-left: 20px; margin-right: 300px;"  >
         <h1 style="color: slateblue; font-family: fantasy; ;"><u>Registration Form:</u></h1><br>
